--- a/WPF 3/MainWindow.xaml
+++ b/WPF 3/MainWindow.xaml
@@ -9,9 +9,25 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <ToolBarTray Grid.Row="0">
+        <Menu Margin="1" Padding="2" Grid.Row="0" VerticalAlignment="Center" Background="White">
+            <MenuItem Header="_Файл">
+                <MenuItem Header="_Открыть" Click="MenuItem_Click"/>
+                <MenuItem Header="_Сохранить" Click="MenuItem_Click_1"/>
+                <Separator/>
+                <MenuItem Header="_Выход" Click="MenuItem_Click_2"/>
+            </MenuItem>                
+            <MenuItem Header="_Правка">
+                <MenuItem Header="_Копировать" Command="ApplicationCommands.Copy"/>
+                <MenuItem Header="_Вставить" Command="ApplicationCommands.Paste"/>
+                <MenuItem Header="_Вырезать" Command="ApplicationCommands.Cut"/>
+                <Separator/>
+                <MenuItem Header="_Выделить все" Command="ApplicationCommands.SelectAll"/>
+            </MenuItem>
+        </Menu>
+        <ToolBarTray Grid.Row="1">
             <ToolBar Margin="5" Padding="5">
                 <ComboBox Width="200" Margin="5" Padding="5" SelectedIndex="0" SelectionChanged="ComboBox_SelectionChanged">
                     <TextBlock Text="Arial"/>
@@ -44,7 +60,7 @@
                 </StackPanel>
             </ToolBar>
         </ToolBarTray>
-        <TextBox x:Name="textBox" Grid.Row="1" Margin="5" Padding="5" FontFamily="Arial" FontSize="16" TextWrapping="Wrap">
+        <TextBox x:Name="textBox" Grid.Row="2" Margin="5" Padding="5" FontFamily="Arial" FontSize="16" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" AcceptsReturn="True">
             
         </TextBox>
     </Grid>
